--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    <style>
+    <zlink rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <zlink rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <zstyle>
       body {
         background-color: red;
       }
-    </style>
+    </zstyle>
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
