--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
-    <zlink rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/markdowncss/splendor/471988a6aa1a2cc75858f5e184e441bb3b9be5a4/css/splendor.min.css">
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
